--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
   <body>
     <div id="canva"></div>
     <div id="chart"></div>
+    <button id="buildTrack">Nova pista</button>
     <button id="btn">Salvar</button>
+    <!-- TODO carregar model salvo
     <button id="loadBtn">Load</button>
     <input type="file" id="upload-json"/>
-    <input type="file" id="upload-weights"/>
+    <input type="file" id="upload-weights"/> -->
     <script src="RedeNeural.js"></script>
     <script src="Raio.js"></script>
     <script src="Particula.js"></script>
     <script src="Parede.js"></script>
 
     <script type="text/javascript">
-    const TOTAL = 50;
+    const TOTAL = 30;
     const MUTATION_RATE = 0.1;
-    const LIFESPAN = 25;
+    const LIFESPAN = 35;
     const SIGHT = 50;
 
     function pldistance(p1, p2, x, y) {
@@ -85,7 +87,7 @@
     let savedParticles = [];
     let speedSlider = 5;
     let bestP = null;
-    const maxFitness = 500;
+    const maxFitness = 200;
     let changeMap = false;
     let generationCount = 0;
     let acc = '';
@@ -106,7 +108,7 @@
         let xoff = map(cos(a), -1, 1, 0, noiseMax) + startX;
         let yoff = map(sin(a), -1, 1, 0, noiseMax) + startY;
         let xr = map(noise(xoff, yoff), 0, 2, 250, width * 0.9);
-        let yr = map(noise(xoff, yoff), 0, 2, 190, height * 0.8);
+        let yr = map(noise(xoff, yoff), 0, 2, 140, height * 0.8);
         let x1 = width / 2 + (xr - pathWidth) * cos(a);
         let y1 = height / 2 + (yr - pathWidth) * sin(a);
         let x2 = width / 2 + (xr + pathWidth) * cos(a);
@@ -144,13 +146,21 @@
       //  [uploadJSONInput.files[0], uploadWeightsInput.files[0]]));
       const loaded = await tf.loadLayersModel(tf.io.browserFiles([uploadJSONInput.files[0]]));
     }
+    function renewTrack(){
+      for (let i = population.length -1; i >= 0; i--){
+        savedParticles.push(population.splice(i, 1)[0]);
+      }
+      buildTrack();
+      nextGeneration();
+    }
     function setup() {
       let canva = createCanvas(1220, 600);
       canva.parent('canva');
       tf.setBackend('cpu');
       buildTrack();
+      document.getElementById('buildTrack').addEventListener('click', renewTrack);
       document.getElementById('btn').addEventListener('click', salvar);
-      document.getElementById('loadBtn').addEventListener('click', getModelSalvo);
+      //document.getElementById('loadBtn').addEventListener('click', getModelSalvo);
       for (let i = 0; i < TOTAL; i++) {
         population[i] = new Particula();
       }
@@ -187,12 +197,7 @@
           }
         }
         if(population.length !== 0 && changeMap){
-          for (let i = population.length -1; i >= 0; i--){
-            savedParticles.push(population.splice(i, 1)[0]);
-          }
-          buildTrack();
-          nextGeneration();
-          generationCount++;
+          renewTrack();
           changeMap = false;
         }
         if(population.length == 0){
@@ -219,7 +224,7 @@
       noStroke();
 
       text('Generation: ' + generationCount, 10, 570);
-      text('Accuracy: '+ String(accuracy), 10, 590)
+      text('Sensors: '+ String(accuracy), 10, 590)
       //atualizaGrafico(accs);
     }
     function atualizaGrafico(acs){
